fix: refactor code smell Long Parameter List using Introduce Parameter Objecte refactoring technique